tests/paczka1/small_fuzzy/13997617.err
Error in line 5: VvtVO1OHp A670 15,7
Error in line 11: zOyoa6 S775 19,7
